--- a/analyze-bc/example_notebook.ipynb
+++ b/analyze-bc/example_notebook.ipynb
@@ -79,16 +79,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "efb4b47d-9059-41e4-b7d2-21b0b7aa9c21",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bolos."
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "id": "4a4988fa-9319-4af4-a45f-b89f0f53dcd6",
    "metadata": {},
@@ -106,17 +96,16 @@
     }
    ],
    "source": [
-    "# calc_bolos() runs \"calcBolos.py\" and returns a dictionary of NETs and optical powers for each given band\n",
     "sensitivity_dict = bolos.calc_bolos()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "386328fe-8802-46d4-b14f-ab0b456d9639",
+   "cell_type": "markdown",
+   "id": "faf30a00-890a-4d74-ba47-7dbac18afb44",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### calc_bolos() returns a dictionary of NETs [uK_RJ-rtSec and uK_CMB-rtSec] and optical powers [pW] for each given band"
+   ]
   },
   {
    "cell_type": "code",
@@ -262,7 +251,7 @@
    "outputs": [],
    "source": [
     "# write to text file\n",
-    "#df.to_csv('sensitivity.txt', sep='\\t' ,encoding='utf-8')"
+    "df.to_csv('sensitivity.txt', sep='\\t' ,encoding='utf-8')"
    ]
   },
   {
@@ -275,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "8afa307b-a0b4-4622-b465-9cd807e782b4",
    "metadata": {},
    "outputs": [
@@ -283,25 +272,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Detector at 25.0 GHz has a pixel diameter of 80.0 mm\n",
-      "Detector at 60.0 GHz has a pixel diameter of 20.0 mm\n",
-      "Detector at 100.0 GHz has a pixel diameter of 10.0 mm\n",
-      "Detector at 160.0 GHz has a pixel diameter of 6.7 mm\n",
-      "Detector at 250.0 GHz has a pixel diameter of 4.0 mm\n",
-      "Detector at 400.0 GHz has a pixel diameter of 2.7 mm\n",
-      "Detector at 600.0 GHz has a pixel diameter of 1.6 mm\n",
-      "Detector at 850.0 GHz has a pixel diameter of 1.1 mm\n"
+      "Detector: 25.0 GHz \t Pixel diameter: 80.0 mm\n",
+      "Detector: 60.0 GHz \t Pixel diameter: 20.0 mm\n",
+      "Detector: 100.0 GHz \t Pixel diameter: 10.0 mm\n",
+      "Detector: 160.0 GHz \t Pixel diameter: 6.7 mm\n",
+      "Detector: 250.0 GHz \t Pixel diameter: 4.0 mm\n",
+      "Detector: 400.0 GHz \t Pixel diameter: 2.7 mm\n",
+      "Detector: 600.0 GHz \t Pixel diameter: 1.6 mm\n",
+      "Detector: 850.0 GHz \t Pixel diameter: 1.1 mm\n"
      ]
     }
    ],
    "source": [
     "for j,nu_0 in enumerate(bolos.band_centers):\n",
-    "    print(f'Detector at {nu_0:0.1f} GHz has a pixel diameter of {bolos.pixel_sizes[j]:0.1f} mm')"
+    "    print(f'Detector: {nu_0:0.1f} GHz \\t Pixel diameter: {bolos.pixel_sizes[j]:0.1f} mm')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "9a6a5bf8-3720-4060-9c3d-23b9ee994dcd",
    "metadata": {},
    "outputs": [],
